tests/errors/semantics/typecheck_binary_expr/invalid_types_for_shl_assign.c
// Invalid argument types to binary expression
void main()
{
	float i = 5.7;
	i <<= 2;
}
